# trender

./: CMakeLists.txt  README.md
src/: Trispec.cpp  Trispec.h  camera.cpp  camera.h  dbuffer.cpp  dbuffer.h  lighting.cpp  lighting.h  main.cpp  model.cpp  model.h  render.cpp  render.h  renderer.cpp  renderer.h  tgaimage.h  utility.cpp  utility.h  world.cpp  world.h
